@@ -15,7 +15,7 @@ deb $mirror $suite-updates #slurp
 #echo ' '.join($components)
 #end if
 
-deb http://security.ubuntu.com/ubuntu $suite-security #slurp
+deb $smirror $suite-security #slurp
 #echo ' '.join($components)
 
 #if $ppa
